--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		
 		<link href="./_app/immutable/assets/0.D4X4yOIF.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ProgressBar.Cirlo5Z8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CtjZIP5s.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.uzIeb0JX.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CYzaOa97.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BpA7R65Q.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DFLkqwTt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BrXgapp9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Bcf61L9j.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BIbgPyD2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DThMT7MT.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.pGBr-bdX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BLu1vE7B.js">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_1pcr80i = {
+					__sveltekit_b73itw = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CtjZIP5s.js"),
-						import("./_app/immutable/entry/app.Bcf61L9j.js")
+						import("./_app/immutable/entry/start.CYzaOa97.js"),
+						import("./_app/immutable/entry/app.BIbgPyD2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
