--- a/example.html
+++ b/example.html
@@ -7,11 +7,11 @@
 		
 		<link href="./_app/immutable/assets/0.D4X4yOIF.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ProgressBar.Cirlo5Z8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Dn4JUawH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BshMmsXa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BozHmXT0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ojTAX6nJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DFLkqwTt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BrXgapp9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.qMudPUMs.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.q7KeMV1A.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DThMT7MT.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.pGBr-bdX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BLu1vE7B.js">
@@ -28,7 +28,7 @@
 			
 			<script>
 				{
-					__sveltekit_14wbtch = {
+					__sveltekit_1u7ka1q = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -37,8 +37,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Dn4JUawH.js"),
-						import("./_app/immutable/entry/app.qMudPUMs.js")
+						import("./_app/immutable/entry/start.BozHmXT0.js"),
+						import("./_app/immutable/entry/app.q7KeMV1A.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
