--- a/editor.html
+++ b/editor.html
@@ -4,300 +4,39 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-
-		<link href="./_app/immutable/assets/0.D4X4yOIF.css" rel="stylesheet" />
-		<link href="./_app/immutable/assets/ProgressBar.Cirlo5Z8.css" rel="stylesheet" />
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BhbKv9OF.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BrxjhjPH.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DFLkqwTt.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.BrXgapp9.js" />
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BKFjbqnm.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.DThMT7MT.js" />
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.lmgLn6bx.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BLu1vE7B.js" />
-		<link
-			rel="modulepreload"
-			href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.dhjFsQWZ.js"
-		/>
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.B6t9CLad.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/ButtonBox.Csslo3Cz.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressRadial.DCQMZ2dH.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/editorStore.q6LA20UU.js" />
+		
+		<link href="./_app/immutable/assets/0.DH5LQ7m6.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/ProgressBar.Cirlo5Z8.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Mj660Avv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ojmYjoVp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CcAwvEnr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CT6Yb9O0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B2xnyxLI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.u1Eg8cTy.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BnCcEK-D.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Icon.D9-48yDF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.DXi_RU-c.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.D9zhCJUw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ButtonBox.DBC39x77.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressRadial.CZyQqi7r.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/editorStore.Ddyefbd8.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
-		<div style="display: contents">
-			<div
-				id="appShell"
-				class="w-full h-full flex flex-col overflow-hidden"
-				data-testid="app-shell"
-			>
-				<header id="shell-header" class="flex-none z-10">
-					<div
-						class="app-bar flex flex-col bg-surface-100-800-token space-y-4 p-4"
-						data-testid="app-bar"
-						role="toolbar"
-						aria-label=""
-						aria-labelledby=""
-					>
-						<div class="app-bar-row-main grid items-center grid-cols-[auto_1fr_auto] gap-4">
-							<div class="app-bar-slot-lead flex-none flex justify-between items-center">
-								<strong class="text-xl uppercase" data-svelte-h="svelte-1703tna"
-									><a href="./" rel="noreferrer">Flexilte</a></strong
-								>
-							</div>
-							<div class="app-bar-slot-default flex-auto"></div>
-							<div class="app-bar-slot-trail flex-none flex items-center space-x-4">
-								<a
-									class="btn btn-sm variant-ghost-surface"
-									href="./docs"
-									rel="noreferrer"
-									data-svelte-h="svelte-1284yz6"
-									>Documentation</a
-								>
-								<a
-									class="btn btn-sm variant-ghost-surface"
-									href="./example"
-									rel="noreferrer"
-									data-svelte-h="svelte-1vyj2s6"
-									>Example</a
-								>
-								<a
-									class="btn btn-sm variant-ghost-surface"
-									href="./editor"
-									rel="noreferrer"
-									data-svelte-h="svelte-1l71z8m"
-									>Editor</a
-								>
-								<a
-									class="btn btn-sm variant-ghost-surface"
-									href="./ai"
-									rel="noreferrer"
-									data-svelte-h="svelte-1mp3i7y"
-									>AI</a
-								>
-								<a
-									class="btn btn-sm variant-ghost-surface"
-									href="https://github.com/"
-									rel="noreferrer"
-									data-svelte-h="svelte-1a2ahop"
-									>GitHub</a
-								>
-							</div>
-						</div>
-					</div>
-				</header>
-				<div class="flex-auto w-full h-full flex overflow-hidden">
-					<div
-						id="page"
-						class="flex-1 overflow-x-hidden flex flex-col"
-						style="scrollbar-gutter: auto"
-					>
-						<main id="page-content" class="flex-auto">
-							<div class="container mx-auto mt-6">
-								<div class="flex flex-col md:flex-row flexilte flexilte-row w-full">
-									<div class="flexilte flexilte-item w-full justify-center flex">
-										<h2 class="h2"><div>Flexilte Drag And Drop Editor</div></h2>
-									</div>
-								</div>
-								<div class="flex flex-col md:flex-row flexilte flexilte-row w-full">
-									<div class="flex flex-col w-full flexilte flexilte-col">
-										<div class="flexilte flexilte-item w-full justify-end items-center flex">
-											<button class="btn variant-filled" data-svelte-h="svelte-gp0qqz">
-												Export
-											</button>
-										</div>
-									</div>
-								</div>
-								<div class="flex flex-col md:flex-row flexilte flexilte-row w-full">
-									<div class="flex flex-col w-full flexilte flexilte-col md:w-2/6 mt-4">
-										<div
-											class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4"
-										>
-											<div class="flexilte flexilte-item w-full">
-												<h4 class="h4"><div>UI Components</div></h4>
-											</div>
-										</div>
-										<div
-											class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4 flex-1"
-										>
-											<div class="flexilte flexilte-item w-full">
-												<div id="toolbox">
-													<div class="flex flex-1 flex-wrap gap-4 gap-y-6">
-														<div class="max-h-24 w-32">
-															<div class="w-full">
-																<a href=""
-																	><div
-																		class="card variant-filled-surface text-center card-hover overflow-hidden h-full"
-																	>
-																		<div
-																			class="flex items-center justify-center h-12 variant-filled-tertiary"
-																		></div>
-																		<section class="p-4">TextBox</section>
-																	</div></a
-																>
-															</div>
-														</div>
-														<div class="max-h-24 w-32">
-															<div class="w-full">
-																<a href=""
-																	><div
-																		class="card variant-filled-surface text-center card-hover overflow-hidden h-full"
-																	>
-																		<div
-																			class="flex items-center justify-center h-12 variant-filled-tertiary"
-																		></div>
-																		<section class="p-4">ImageBox</section>
-																	</div></a
-																>
-															</div>
-														</div>
-														<div class="max-h-24 w-32">
-															<div class="w-full">
-																<a href=""
-																	><div
-																		class="card variant-filled-surface text-center card-hover overflow-hidden h-full"
-																	>
-																		<div
-																			class="flex items-center justify-center h-12 variant-filled-tertiary"
-																		></div>
-																		<section class="p-4">CardBox</section>
-																	</div></a
-																>
-															</div>
-														</div>
-														<div class="max-h-24 w-32">
-															<div class="w-full">
-																<a href=""
-																	><div
-																		class="card variant-filled-surface text-center card-hover overflow-hidden h-full"
-																	>
-																		<div
-																			class="flex items-center justify-center h-12 variant-filled-tertiary"
-																		></div>
-																		<section class="p-4">CodeBlock</section>
-																	</div></a
-																>
-															</div>
-														</div>
-														<div class="max-h-24 w-32">
-															<div class="w-full">
-																<a href=""
-																	><div
-																		class="card variant-filled-surface text-center card-hover overflow-hidden h-full"
-																	>
-																		<div
-																			class="flex items-center justify-center h-12 variant-filled-tertiary"
-																		></div>
-																		<section class="p-4">Add Row</section>
-																	</div></a
-																>
-															</div>
-														</div>
-														<div class="max-h-24 w-32">
-															<div class="w-full">
-																<a href=""
-																	><div
-																		class="card variant-filled-surface text-center card-hover overflow-hidden h-full"
-																	>
-																		<div
-																			class="flex items-center justify-center h-12 variant-filled-tertiary"
-																		></div>
-																		<section class="p-4">Add Col</section>
-																	</div></a
-																>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div
-											class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4"
-										>
-											<div class="flexilte flexilte-item w-full">
-												<div class="relative h-32 w-full">
-													<div class="flex flex-1 flex-wrap gap-4 gap-y-6 absolute inset-0"></div>
-													<div
-														class="h-32 w-full bg-slate-400 border-2 border-slate-600 flex items-center justify-center absolute inset-0 z-10 opacity-75"
-													></div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="flex flex-col w-full flexilte flexilte-col md:w-5/6 mt-4">
-										<div
-											class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4"
-										>
-											<div class="flexilte flexilte-item w-full">
-												<h4 class="h4"><div>Preview</div></h4>
-											</div>
-										</div>
-										<div
-											class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4 flex-1"
-										>
-											<div class="flexilte flexilte-item w-full">
-												<div id="preview" class="flexilte-row">
-													<div class="flex flex-col md:flex-row flexilte flexilte-row w-full debug">
-														<div
-															class="flex flex-col md:flex-row flexilte flexilte-row w-full debug"
-														>
-															<div class="flex flex-col w-full flexilte flexilte-col debug">
-																<div class="flexilte flexilte-item w-full">
-																	<div
-																		id="placeholder"
-																		class="h-12 w-12 bg-slate-400 border-2 border-slate-600 flex items-center justify-center"
-																	></div>
-																</div>
-															</div>
-															<div class="flex flex-col w-full flexilte flexilte-col debug">
-																<div class="flexilte flexilte-item w-full">
-																	<div
-																		id="placeholder"
-																		class="h-12 w-12 bg-slate-400 border-2 border-slate-600 flex items-center justify-center"
-																	></div>
-																</div>
-															</div>
-														</div>
-													</div>
-												</div>
-												<button data-svelte-h="svelte-16ut5ff">init</button>
-											</div>
-										</div>
-									</div>
-									<div class="flex flex-col w-full flexilte flexilte-col md:w-1/6 mt-4">
-										<div
-											class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4"
-										>
-											<div class="flexilte flexilte-item w-full">
-												<h4 class="h4"><div>Inspector</div></h4>
-											</div>
-										</div>
-										<div
-											class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4 flex-1"
-										>
-											<div class="flexilte flexilte-item w-full"></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</main>
-					</div>
-				</div>
-			</div>
-
+		<div style="display: contents">   <div id="appShell" class="w-full h-full flex flex-col overflow-hidden " data-testid="app-shell"> <header id="shell-header" class="flex-none z-10"> <div class="app-bar flex flex-col bg-surface-100-800-token  space-y-4 p-4  " data-testid="app-bar" role="toolbar" aria-label="" aria-labelledby=""> <div class="app-bar-row-main grid items-center grid-cols-[auto_1fr_auto] gap-4 "> <div class="app-bar-slot-lead flex-none flex justify-between items-center "><strong class="text-xl uppercase" data-svelte-h="svelte-1703tna"><a href="./" rel="noreferrer">Flexilte</a></strong></div>  <div class="app-bar-slot-default flex-auto "></div>  <div class="app-bar-slot-trail flex-none flex items-center space-x-4 "><div class="hidden md:block" data-svelte-h="svelte-tbws5h"><a class="btn btn-sm variant-ghost-surface" href="./docs" rel="noreferrer">Documentation</a> <a class="btn btn-sm variant-ghost-surface" href="./example" rel="noreferrer">Example</a> <a class="btn btn-sm variant-ghost-surface" href="./editor" rel="noreferrer">Editor</a> <a class="btn btn-sm variant-ghost-surface" href="./ai" rel="noreferrer">AI</a> <a class="btn btn-sm variant-ghost-surface" href="https://github.com/" rel="noreferrer">GitHub</a></div> <div class="block md:hidden"><button type="button" class="btn-icon bg-initial"></button></div> </div></div>  </div> </header>  <div class="flex-auto w-full h-full flex overflow-hidden">   <div id="page" class=" flex-1 overflow-x-hidden flex flex-col" style="scrollbar-gutter: auto;">   <main id="page-content" class="flex-auto "> <div class="container mx-auto mt-6"><div class="flex flex-col md:flex-row flexilte flexilte-row w-full    "><div class="flexilte flexilte-item w-full  justify-center flex "><h2 class="h2"><div>Flexilte Drag And Drop Editor</div></h2></div> </div><div class="flex flex-col md:flex-row flexilte flexilte-row w-full    "><div class="flex flex-col w-full flexilte flexilte-col    "><div class="flexilte flexilte-item w-full  justify-end items-center flex "><button class="btn variant-filled" data-svelte-h="svelte-gp0qqz">Export</button></div> </div> </div><div class="flex flex-col md:flex-row flexilte flexilte-row w-full    "><div class="flex flex-col w-full flexilte flexilte-col md:w-2/6 mt-4  "><div class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4   "><div class="flexilte flexilte-item w-full  "><h4 class="h4"><div>UI Components</div></h4></div> </div><div class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4   flex-1"><div class="flexilte flexilte-item w-full  "><div id="toolbox"> <div class="flex flex-1 flex-wrap gap-4 gap-y-6"><div class="max-h-24 w-32"><div class="w-full"><a href=""><div class="card variant-filled-surface text-center card-hover overflow-hidden h-full"> <div class="flex items-center justify-center h-12 variant-filled-tertiary"></div>  <section class="p-4">TextBox</section> </div></a></div> </div><div class="max-h-24 w-32"><div class="w-full"><a href=""><div class="card variant-filled-surface text-center card-hover overflow-hidden h-full"> <div class="flex items-center justify-center h-12 variant-filled-tertiary"></div>  <section class="p-4">ImageBox</section> </div></a></div> </div><div class="max-h-24 w-32"><div class="w-full"><a href=""><div class="card variant-filled-surface text-center card-hover overflow-hidden h-full"> <div class="flex items-center justify-center h-12 variant-filled-tertiary"></div>  <section class="p-4">CardBox</section> </div></a></div> </div><div class="max-h-24 w-32"><div class="w-full"><a href=""><div class="card variant-filled-surface text-center card-hover overflow-hidden h-full"> <div class="flex items-center justify-center h-12 variant-filled-tertiary"></div>  <section class="p-4">CodeBlock</section> </div></a></div> </div><div class="max-h-24 w-32"><div class="w-full"><a href=""><div class="card variant-filled-surface text-center card-hover overflow-hidden h-full"> <div class="flex items-center justify-center h-12 variant-filled-tertiary"></div>  <section class="p-4">Add Row</section> </div></a></div> </div><div class="max-h-24 w-32"><div class="w-full"><a href=""><div class="card variant-filled-surface text-center card-hover overflow-hidden h-full"> <div class="flex items-center justify-center h-12 variant-filled-tertiary"></div>  <section class="p-4">Add Col</section> </div></a></div> </div></div></div></div> </div><div class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4   "><div class="flexilte flexilte-item w-full  "><div class="relative h-32 w-full"> <div class="flex flex-1 flex-wrap gap-4 gap-y-6 absolute inset-0"></div> <div class="h-32 w-full bg-slate-400 border-2 border-slate-600 flex items-center justify-center absolute inset-0 z-10 opacity-75"></div></div></div> </div> </div><div class="flex flex-col w-full flexilte flexilte-col md:w-5/6 mt-4  "><div class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4   "><div class="flexilte flexilte-item w-full  "><h4 class="h4"><div>Preview</div></h4></div> </div><div class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4   flex-1"><div class="flexilte flexilte-item w-full  "><div id="preview" class="flexilte-row"> <div class="flex flex-col md:flex-row flexilte flexilte-row w-full   debug  "><div class="flex flex-col md:flex-row flexilte flexilte-row w-full   debug  "><div class="flex flex-col w-full flexilte flexilte-col    debug "><div class="flexilte flexilte-item w-full  "><div id="placeholder" class="h-12 w-12 bg-slate-400 border-2 border-slate-600 flex items-center justify-center"></div></div> </div><div class="flex flex-col w-full flexilte flexilte-col    debug "><div class="flexilte flexilte-item w-full  "><div id="placeholder" class="h-12 w-12 bg-slate-400 border-2 border-slate-600 flex items-center justify-center"></div></div> </div> </div> </div></div> <button data-svelte-h="svelte-16ut5ff">init</button></div> </div> </div><div class="flex flex-col w-full flexilte flexilte-col md:w-1/6 mt-4  "><div class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4   "><div class="flexilte flexilte-item w-full  "><h4 class="h4"><div>Inspector</div></h4></div> </div><div class="flex flex-col md:flex-row flexilte flexilte-row w-full variant-ghost p-4   flex-1"><div class="flexilte flexilte-item w-full  "></div> </div> </div> </div> </div></main>  </div>  </div>  </div>   
+			
 			<script>
 				{
-					__sveltekit_kc6isz = {
-						base: new URL('.', location).pathname.slice(0, -1)
+					__sveltekit_l51hn6 = {
+						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
-					const data = [null, null];
+					const data = [null,null];
 
 					Promise.all([
-						import('./_app/immutable/entry/start.BhbKv9OF.js'),
-						import('./_app/immutable/entry/app.BKFjbqnm.js')
+						import("./_app/immutable/entry/start.Mj660Avv.js"),
+						import("./_app/immutable/entry/app.B2xnyxLI.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
