--- a/ai.html
+++ b/ai.html
@@ -4,164 +4,39 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-
-		<link href="./_app/immutable/assets/0.DH5LQ7m6.css" rel="stylesheet" />
-		<link href="./_app/immutable/assets/ProgressBar.Cirlo5Z8.css" rel="stylesheet" />
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Mj660Avv.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ojmYjoVp.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CcAwvEnr.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CT6Yb9O0.js" />
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B2xnyxLI.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.u1Eg8cTy.js" />
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BnCcEK-D.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/Icon.D9-48yDF.js" />
-		<link
-			rel="modulepreload"
-			href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.DXi_RU-c.js"
-		/>
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.D2b0hPMa.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/ButtonBox.DBC39x77.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressRadial.CZyQqi7r.js" />
-		<link rel="modulepreload" href="./_app/immutable/chunks/editorStore.Ddyefbd8.js" />
+		
+		<link href="./_app/immutable/assets/0.BAuL3TSE.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/ProgressBar.Cirlo5Z8.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BRvqdueR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DQgwLnSf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Bh67o3Vo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CqBFx_WO.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CKe4Q-pm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.BnhmfNAO.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D02IBxRD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Icon.GYccF4GM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.2hqD1lOb.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.Dej0fjUd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/JsonLayout.CaLegjzp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/editorStore.C3nwQ-xd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ButtonBox.C_K9paKY.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
-		<div style="display: contents">
-			<div
-				id="appShell"
-				class="w-full h-full flex flex-col overflow-hidden"
-				data-testid="app-shell"
-			>
-				<header id="shell-header" class="flex-none z-10">
-					<div
-						class="app-bar flex flex-col bg-surface-100-800-token space-y-4 p-4"
-						data-testid="app-bar"
-						role="toolbar"
-						aria-label=""
-						aria-labelledby=""
-					>
-						<div class="app-bar-row-main grid items-center grid-cols-[auto_1fr_auto] gap-4">
-							<div class="app-bar-slot-lead flex-none flex justify-between items-center">
-								<strong class="text-xl uppercase" data-svelte-h="svelte-1703tna"
-									><a href="./" rel="noreferrer">Flexilte</a></strong
-								>
-							</div>
-							<div class="app-bar-slot-default flex-auto"></div>
-							<div class="app-bar-slot-trail flex-none flex items-center space-x-4">
-								<div class="hidden md:block" data-svelte-h="svelte-tbws5h">
-									<a class="btn btn-sm variant-ghost-surface" href="./docs" rel="noreferrer"
-										>Documentation</a
-									>
-									<a class="btn btn-sm variant-ghost-surface" href="./example" rel="noreferrer"
-										>Example</a
-									>
-									<a class="btn btn-sm variant-ghost-surface" href="./editor" rel="noreferrer"
-										>Editor</a
-									>
-									<a class="btn btn-sm variant-ghost-surface" href="./ai" rel="noreferrer">AI</a>
-									<a
-										class="btn btn-sm variant-ghost-surface"
-										href="https://github.com/"
-										rel="noreferrer"
-										>GitHub</a
-									>
-								</div>
-								<div class="block md:hidden">
-									<button type="button" class="btn-icon bg-initial"></button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</header>
-				<div class="flex-auto w-full h-full flex overflow-hidden">
-					<div
-						id="page"
-						class="flex-1 overflow-x-hidden flex flex-col"
-						style="scrollbar-gutter: auto"
-					>
-						<main id="page-content" class="flex-auto">
-							<div class="px-4 container mx-auto">
-								<div class="flex flex-col md:flex-row flexilte flexilte-row w-full">
-									<div class="flexilte flexilte-item w-full">
-										<div class="px-4 container mx-auto h-[48rem] w-full">
-											<div class="flex flex-col md:flex-row flexilte flexilte-row w-full">
-												<div class="flex flex-col w-full flexilte flexilte-col">
-													<div
-														class="flexilte flexilte-item w-full justify-center items-center flex h-96"
-													>
-														<div>Waiting for response</div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="flex flex-col md:flex-row flexilte flexilte-row w-full">
-									<div class="flexilte flexilte-item w-full">
-										<div class="input-group-divider rounded-container-token">
-											<div class="m-4"></div>
-											<label class="label"
-												><span data-svelte-h="svelte-5ayklz">Endpoint</span>
-												<input
-													class="input rounded-container-token"
-													type="text"
-													placeholder="Input"
-													value="https://api.openai.com/v1/chat/completions"
-											/></label>
-											<label class="label"
-												><span data-svelte-h="svelte-1m5u4hd">Model</span>
-												<input
-													class="input rounded-container-token"
-													type="text"
-													placeholder="Input"
-													value="gpt-4o"
-											/></label>
-											<label class="label"
-												><span data-svelte-h="svelte-1rirsag">API key (stored in browser)</span>
-												<input
-													class="input rounded-container-token"
-													type="password"
-													placeholder="Input"
-													value="sk-"
-											/></label>
-										</div>
-										<div
-											class="input-group input-group-divider grid-cols-[auto_1fr_auto] rounded-container-token mt-6"
-										>
-											<button class="input-group-shim" data-svelte-h="svelte-pe7l84">+</button>
-											<textarea
-												class="bg-transparent border-0 ring-0"
-												name="prompt"
-												id="prompt"
-												placeholder="Write a message..."
-												rows="7"
-											>
-You are a AI chatbot that only response JSON. You are required to generate a json based on this example:`{"rows":[{"component":"TextBox","props":{"text":"My Website!","type":"h1"},"centerX":"middle"},{"layoutClass":"md:my-12","cols":[{"component":"TextBox","props":{"text":"Hi! This is AI generated!","type":"h1"},"centerX":"middle","centerY":"middle"},{"component":"CodeBlock","props":{"language":"ts","code":"console.log(123)"},"centerX":"middle","centerY":"middle"},{"component":"ImageBox","props":{"url":"https://placedog.net/200/200"},"centerX":"middle","centerY":"middle"}]}]}` You have 3 components you can use: TextBox,CodeBlock,ImageBox. User: Please generate me a personal website</textarea
-											>
-											<button class="variant-filled-primary" data-svelte-h="svelte-1i8gbo3">
-												Send
-											</button>
-										</div>
-									</div>
-								</div>
-							</div>
-						</main>
-					</div>
-				</div>
-			</div>
-
+		<div style="display: contents">     <div id="appShell" class="w-full h-full flex flex-col overflow-hidden " data-testid="app-shell"> <header id="shell-header" class="flex-none z-10"> <div class="app-bar flex flex-col bg-surface-100-800-token  space-y-4 p-4  " data-testid="app-bar" role="toolbar" aria-label="" aria-labelledby=""> <div class="app-bar-row-main grid items-center grid-cols-[auto_1fr_auto] gap-4 "> <div class="app-bar-slot-lead flex-none flex justify-between items-center "><strong class="text-xl uppercase" data-svelte-h="svelte-1703tna"><a href="./" rel="noreferrer">Flexilte</a></strong></div>  <div class="app-bar-slot-default flex-auto "></div>  <div class="app-bar-slot-trail flex-none flex items-center space-x-4 "><div class="hidden md:block" data-svelte-h="svelte-tbws5h"><a class="btn btn-sm variant-ghost-surface" href="./docs" rel="noreferrer">Documentation</a> <a class="btn btn-sm variant-ghost-surface" href="./example" rel="noreferrer">Example</a> <a class="btn btn-sm variant-ghost-surface" href="./editor" rel="noreferrer">Editor</a> <a class="btn btn-sm variant-ghost-surface" href="./ai" rel="noreferrer">AI</a> <a class="btn btn-sm variant-ghost-surface" href="https://github.com/" rel="noreferrer">GitHub</a></div> <div class="block md:hidden"><button type="button" class="btn-icon bg-initial"></button></div> </div></div>  </div> </header>  <div class="flex-auto w-full h-full flex overflow-hidden">   <div id="page" class=" flex-1 overflow-x-hidden flex flex-col" style="scrollbar-gutter: auto;">   <main id="page-content" class="flex-auto "> <div class="px-4 container mx-auto"><div class="flex flex-col md:flex-row flexilte flexilte-row w-full    "><div class="flexilte flexilte-item w-full  "><div class="px-4 container mx-auto h-[48rem] w-full"><div class="flex flex-col md:flex-row flexilte flexilte-row w-full    "><div class="flex flex-col w-full flexilte flexilte-col    "><div class="flexilte flexilte-item w-full  justify-center items-center flex h-96"><div>Waiting for response</div></div> </div> </div></div></div> </div><div class="flex flex-col md:flex-row flexilte flexilte-row w-full    "><div class="flexilte flexilte-item w-full  "><div class="input-group-divider rounded-container-token"><div class="m-4"></div> <label class="label"><span data-svelte-h="svelte-5ayklz">Endpoint</span> <input class="input rounded-container-token" type="text" placeholder="Input" value="https://api.openai.com/v1/chat/completions"></label> <label class="label"><span data-svelte-h="svelte-1m5u4hd">Model</span> <input class="input rounded-container-token" type="text" placeholder="Input" value="gpt-4o"></label> <label class="label"><span data-svelte-h="svelte-1rirsag">API key (stored in browser)</span> <input class="input rounded-container-token" type="password" placeholder="Input" value="sk-"></label></div> <div class="input-group input-group-divider grid-cols-[auto_1fr_auto] rounded-container-token mt-6"><button class="input-group-shim" data-svelte-h="svelte-pe7l84">+</button> <textarea class="bg-transparent border-0 ring-0" name="prompt" id="prompt" placeholder="Write a message..." rows="7">You are a AI chatbot that only response JSON. You are required to generate a json based on this example:`{"rows":[{"component":"TextBox","props":{"text":"My Website!","type":"h1"},"posX":"middle"},{"layoutClass":"md:my-12","cols":[{"component":"TextBox","props":{"text":"Hi! This is AI generated!","type":"h1"},"posX":"middle","posY":"middle"},{"component":"CodeBlock","props":{"language":"ts","code":"console.log(123)"},"posX":"middle","posY":"middle"},{"component":"ImageBox","props":{"url":"https://placedog.net/200/200"},"posX":"middle","posY":"middle"}]}]}` You have 3 components you can use: TextBox,CodeBlock,ImageBox. User: Please generate me a personal website</textarea> <button class="variant-filled-primary" data-svelte-h="svelte-1i8gbo3">Send</button></div></div> </div></div></main>  </div>  </div>  </div>   
+			
 			<script>
 				{
-					__sveltekit_l51hn6 = {
-						base: new URL('.', location).pathname.slice(0, -1)
+					__sveltekit_9hmpo7 = {
+						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
-					const data = [null, null];
+					const data = [null,null];
 
 					Promise.all([
-						import('./_app/immutable/entry/start.Mj660Avv.js'),
-						import('./_app/immutable/entry/app.B2xnyxLI.js')
+						import("./_app/immutable/entry/start.BRvqdueR.js"),
+						import("./_app/immutable/entry/app.CKe4Q-pm.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
