--- a/docs.html
+++ b/docs.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.BAuL3TSE.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.nyoUVe8Q.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ProgressBar.Cirlo5Z8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BRvqdueR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DQgwLnSf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1voQ5-XF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BBkSVO-P.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Bh67o3Vo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CqBFx_WO.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CKe4Q-pm.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BDjpBCwq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BnhmfNAO.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.D02IBxRD.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.mSW814Sq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Icon.GYccF4GM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.2hqD1lOb.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.yxMfsndE.js">
@@ -28,7 +28,7 @@
 			
 			<script>
 				{
-					__sveltekit_9hmpo7 = {
+					__sveltekit_1ibda1q = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -37,8 +37,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BRvqdueR.js"),
-						import("./_app/immutable/entry/app.CKe4Q-pm.js")
+						import("./_app/immutable/entry/start.1voQ5-XF.js"),
+						import("./_app/immutable/entry/app.BDjpBCwq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
