--- a/example.html
+++ b/example.html
@@ -8,16 +8,16 @@
 		<link href="./_app/immutable/assets/0.BAurG9uf.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/TextBox.Cirlo5Z8.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/editorStore.BQhTSa9j.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DujutCpy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CtzbcVnZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DTYLM3Wd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.b2sRTek5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.oRmF3nvV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CT1rnwb_.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BiKy69PT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Cl-E7mbu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Dh10oea0.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.6XA-uUN6.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CE3h_v-4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/common.D_pWozhy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/TextBox.DhgrSzDX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/editorStore.B4pvas0E.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/editorStore.CtQjKCZN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ImageBox.BVkXBsFq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CardBox.KS4DlTsx.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/6.qXP7NKyY.js">
@@ -27,7 +27,7 @@
 			
 			<script>
 				{
-					__sveltekit_f97y50 = {
+					__sveltekit_1x4zsoo = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -36,8 +36,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DujutCpy.js"),
-						import("./_app/immutable/entry/app.BiKy69PT.js")
+						import("./_app/immutable/entry/start.DTYLM3Wd.js"),
+						import("./_app/immutable/entry/app.Cl-E7mbu.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
