--- a/editor.html
+++ b/editor.html
@@ -8,26 +8,26 @@
 		<link href="./_app/immutable/assets/0.BAurG9uf.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/TextBox.Cirlo5Z8.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/editorStore.BQhTSa9j.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DujutCpy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CtzbcVnZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DTYLM3Wd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.b2sRTek5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.oRmF3nvV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CT1rnwb_.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BiKy69PT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Cl-E7mbu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Dh10oea0.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.6XA-uUN6.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CE3h_v-4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/common.D_pWozhy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/TextBox.DhgrSzDX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/editorStore.B4pvas0E.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/editorStore.CtQjKCZN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ImageBox.BVkXBsFq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CardBox.KS4DlTsx.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.B71c30D1.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.B42DqmJM.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
-		<div style="display: contents">     <div id="appShell" class="w-full h-full flex flex-col overflow-hidden " data-testid="app-shell"> <header id="shell-header" class="flex-none z-10"> <div class="app-bar flex flex-col bg-surface-100-800-token  space-y-4 p-4  " data-testid="app-bar" role="toolbar" aria-label="" aria-labelledby=""> <div class="app-bar-row-main grid items-center grid-cols-[auto_1fr_auto] gap-4 "> <div class="app-bar-slot-lead flex-none flex justify-between items-center "><strong class="text-xl uppercase" data-svelte-h="svelte-1703tna"><a href="./" rel="noreferrer">Flexilte</a></strong></div>  <div class="app-bar-slot-default flex-auto "></div>  <div class="app-bar-slot-trail flex-none flex items-center space-x-4 "><div class="hidden md:block" data-svelte-h="svelte-4754zl"><a class="btn btn-sm variant-ghost-surface" href="./docs" rel="noreferrer">Documentation</a> <a class="btn btn-sm variant-ghost-surface" href="./example" rel="noreferrer">Example</a> <a class="btn btn-sm variant-ghost-surface" href="./editor" rel="noreferrer">Editor</a> <a class="btn btn-sm variant-ghost-surface" href="./ai" rel="noreferrer">AI</a> <a class="btn btn-sm variant-ghost-surface" href="https://github.com/AlienCatTech/flexilte" rel="noreferrer">GitHub</a></div> <div class="block md:hidden"><button type="button" class="btn-icon bg-initial"></button></div> </div></div>  </div> </header>  <div class="flex-auto w-full h-full flex overflow-hidden">   <div id="page" class=" flex-1 overflow-x-hidden flex flex-col" style="scrollbar-gutter: auto;">   <main id="page-content" class="flex-auto "> <div class="p-4 bg-surface-50-900-token"><div class="flex flex-col md:flex-row flexilte flexilte-row w-full      "><div class="flex flex-col flexilte flexilte-col w-full    "><div class="flexilte flexilte-item w-full  items-center flex "><h2 class="h2"><div>Preview</div></h2></div> </div><div class="flex flex-col flexilte flexilte-col w-1/6    "><div class="flex flex-col md:flex-row flexilte flexilte-row w-full   justify-end    "><div class="flex flex-col flexilte flexilte-col w-full    "><div class="flexilte flexilte-item w-full  "><button class="btn variant-filled-primary" data-svelte-h="svelte-1piac2v">Edit</button></div> </div><div class="flex flex-col flexilte flexilte-col w-full    "><div class="flexilte flexilte-item w-full  "><button class="btn variant-filled-tertiary" data-svelte-h="svelte-1kzjjzk">Export</button></div> </div> </div> </div> </div></div> <div class="container mx-auto mt-12"><div class="flexilte flexilte-item w-full  "></div></div></main>  </div>  </div>  </div>   
+		<div style="display: contents">     <div id="appShell" class="w-full h-full flex flex-col overflow-hidden " data-testid="app-shell"> <header id="shell-header" class="flex-none z-10"> <div class="app-bar flex flex-col bg-surface-100-800-token  space-y-4 p-4  " data-testid="app-bar" role="toolbar" aria-label="" aria-labelledby=""> <div class="app-bar-row-main grid items-center grid-cols-[auto_1fr_auto] gap-4 "> <div class="app-bar-slot-lead flex-none flex justify-between items-center "><strong class="text-xl uppercase" data-svelte-h="svelte-1703tna"><a href="./" rel="noreferrer">Flexilte</a></strong></div>  <div class="app-bar-slot-default flex-auto "></div>  <div class="app-bar-slot-trail flex-none flex items-center space-x-4 "><div class="hidden md:block" data-svelte-h="svelte-4754zl"><a class="btn btn-sm variant-ghost-surface" href="./docs" rel="noreferrer">Documentation</a> <a class="btn btn-sm variant-ghost-surface" href="./example" rel="noreferrer">Example</a> <a class="btn btn-sm variant-ghost-surface" href="./editor" rel="noreferrer">Editor</a> <a class="btn btn-sm variant-ghost-surface" href="./ai" rel="noreferrer">AI</a> <a class="btn btn-sm variant-ghost-surface" href="https://github.com/AlienCatTech/flexilte" rel="noreferrer">GitHub</a></div> <div class="block md:hidden"><button type="button" class="btn-icon bg-initial"></button></div> </div></div>  </div> </header>  <div class="flex-auto w-full h-full flex overflow-hidden">   <div id="page" class=" flex-1 overflow-x-hidden flex flex-col" style="scrollbar-gutter: auto;">   <main id="page-content" class="flex-auto "> <div class="p-4 bg-surface-50-900-token"><div class="flex flex-col md:flex-row flexilte flexilte-row w-full      "><div class="flex flex-col flexilte flexilte-col w-full    "><div class="flexilte flexilte-item w-full  items-center flex "><h2 class="h2"><div>Preview</div></h2></div> </div><div class="flex flex-col flexilte flexilte-col w-1/6    "><div class="flex flex-col md:flex-row flexilte flexilte-row w-full   justify-end    "><div class="flex flex-col flexilte flexilte-col w-full    "><div class="flexilte flexilte-item w-full  "><button class="btn variant-filled-primary" data-svelte-h="svelte-1pufvuy">Edit</button></div> </div><div class="flex flex-col flexilte flexilte-col w-full    "><div class="flexilte flexilte-item w-full  "><button class="btn variant-filled-tertiary" data-svelte-h="svelte-1kzjjzk">Export</button></div> </div> </div> </div> </div></div> <div class="container mx-auto mt-12"><div class="flexilte flexilte-item w-full  "></div></div></main>  </div>  </div>  </div>   
 			
 			<script>
 				{
-					__sveltekit_f97y50 = {
+					__sveltekit_1x4zsoo = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -36,8 +36,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DujutCpy.js"),
-						import("./_app/immutable/entry/app.BiKy69PT.js")
+						import("./_app/immutable/entry/start.DTYLM3Wd.js"),
+						import("./_app/immutable/entry/app.Cl-E7mbu.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
